@@ -4,7 +4,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import pl.engineerproject.pw.fifapp.converter.RoundConverter;
+import pl.engineerproject.pw.fifapp.mapper.RoundMapper;
 import pl.engineerproject.pw.fifapp.dto.RoundDto;
 import pl.engineerproject.pw.fifapp.repository.RoundRepository;
 
@@ -21,22 +21,25 @@ public class RoundServiceImpl implements RoundService {
 
     @Override
     public RoundDto getRoundById(Integer roundId) {
-        return RoundConverter.entityToDto(roundRepository.getOne(roundId));
+        return RoundMapper.entityToDto(roundRepository.getOne(roundId));
     }
 
     @Override
     public void saveRound(RoundDto roundDto) {
-        roundRepository.save(RoundConverter.dtoToEntity(roundDto));
+        roundRepository.save( RoundMapper.dtoToEntity(roundDto));
     }
 
     @Override
     public List<RoundDto> getAllRounds() {
-        return roundRepository.findAll(Sort.by(Sort.Direction.DESC,"roundDate")).stream().map(RoundConverter::entityToDto).collect(Collectors.toList());
+        return roundRepository.findAll(Sort.by(Sort.Direction.DESC,"roundDate")).stream().map( RoundMapper::entityToDto).collect(Collectors.toList());
     }
 
     @Override
     public List<RoundDto> getLeagueRounds(Integer leagueId) {
-        List<RoundDto> leagueRounds = roundRepository.findAll(Sort.by(Sort.Direction.DESC,"roundDate")).stream().map(RoundConverter::entityToDto).collect(Collectors.toList());
+        List<RoundDto> leagueRounds = roundRepository.findAll( Sort.by( Sort.Direction.DESC, "roundDate" ) )
+                .stream()
+                .map( RoundMapper::entityToDto )
+                .toList();
         List<RoundDto> result = new ArrayList<>();
 
         for (RoundDto leagueRound : leagueRounds) {
